--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -4,7 +4,7 @@ defaults:
   run:
     shell: bash
 env:
-  WATCH_FILE: .github/workflows/pip-licenses.yml
+  WATCH_FILE: requirements.txt
   FILE_TO_COMMIT: LICENSES.md
   SCRIPT: .github/pip-licenses.sh
   PY_BUILD_DEPS_FILE: requirements.txt
