--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -22,69 +22,63 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.base_ref }}
       - name: 'Set Condition: WATCH_FILE_CHANGED_IN_PR'
-        id: watchfile_changed_in_pr
+        # diff fails if no switch/checkout between diffed branches
         run: |
           git pull --verbose
           git checkout "${GITHUB_HEAD_REF}"
           git diff --exit-code --name-status "${GITHUB_HEAD_REF}..${GITHUB_BASE_REF}" -- "${WATCH_FILE}" ||
             WATCH_FILE_CHANGED_IN_PR=true
           echo "WATCH_FILE_CHANGED_IN_PR=${WATCH_FILE_CHANGED_IN_PR:-false}" >>"${GITHUB_ENV}"
-      - name: Dump env context
-        env:
-          ENV_CONTEXT: ${{ toJson(env) }}
-        run: echo $ENV_CONTEXT
-      - run: |
-          echo '${{ env.WATCH_FILE_CHANGED_IN_PR }}'
-          echo '${{ fromJson(env.WATCH_FILE_CHANGED_IN_PR) }}'
-      - if: env.WATCH_FILE_CHANGED_IN_PR
+      - name: Conditionally Run License File Generator Script
+        # Need fromJson to cast true/false string to boolean
+        if: fromJson(env.WATCH_FILE_CHANGED_IN_PR)
+        # Create two environments to exclude pip-licenses dependencies from output
         run: |
-          echo 'env.WATCH_FILE_CHANGED_IN_PR'
-      - if: fromJson(env.WATCH_FILE_CHANGED_IN_PR)
+          environments=(
+            build-depencies-env
+            pip-licenses-env
+          )
+          echo "${environments[0]}" | tr "[:lower:]" "[:upper:]"
+          python3 -m venv "${environments[0]}"
+          source "${environments[0]}/bin/activate"
+          pip install -r "${PY_BUILD_DEPS_FILE}"
+          deactivate
+          echo "${environments[1]}" | tr "[:lower:]" "[:upper:]"
+          python3 -m venv "${environments[1]}"
+          source "${environments[1]}/bin/activate"
+          pip install pip-licenses
+          {
+            echo -e "# Software Licenses for Build Dependencies of the ${GITHUB_REPOSITORY} Repository\n" &&
+              echo -e "Generated with [\`pip-licenses\`](https://pypi.org/project/pip-licenses/) on $(date -u +%F)\n" &&
+              pip-licenses \
+                --python="./${environments[0]}/bin/python3" \
+                --from=mixed \
+                --order=license \
+                --format=markdown &&
+              echo -e "\n## Summary\n" &&
+              pip-licenses \
+                --python="./${environments[0]}/bin/python3" \
+                --from=mixed \
+                --order=license \
+                --format=markdown \
+                --summary
+          } >"${FILE_TO_COMMIT}"
+          status=$?
+          deactivate
+          rm -fr "${environments[@]}"
+          cat "${FILE_TO_COMMIT}"
+          exit $status
+      - name: Conditionally Commit and Push Output File
+        if: fromJson(env.WATCH_FILE_CHANGED_IN_PR)
         run: |
-          echo 'fromJson(env.WATCH_FILE_CHANGED_IN_PR)'
+          git config user.name github-actions[bot]
+          git config user.email github-actions[bot]@users.noreply.github.com
+          git add --verbose "${FILE_TO_COMMIT}"
+          commit_msg=<<EOF
+          Update license file with new dependencies
 
-#
-#       - name: Conditionally Run License File Generator Script
-#         if: env.WATCH_FILE_CHANGED_IN_PR
-#         # Create two environments to exclude pip-licenses dependencies from output
-#         run: |
-#           environments=(
-#             build-depencies-env
-#             pip-licenses-env
-#           )
-#           echo "${environments[0]}" | tr [:lower:] [:upper:]
-#           python3 -m venv "${environments[0]}"
-#           source "${environments[0]}/bin/activate"
-#           pip install -r "${PY_BUILD_DEPS_FILE}"
-#           deactivate
-#           echo "${environments[1]}" | tr [:lower:] [:upper:]
-#           python3 -m venv "${environments[1]}"
-#           source "${environments[1]}/bin/activate"
-#           pip install pip-licenses
-#           {
-#             echo -e "# Software Licenses for Build Dependencies of the ${GITHUB_REPOSITORY} Repository\n"
-#             echo -e "Generated with [\`pip-licenses\`](https://pypi.org/project/pip-licenses/) on $(date -u +%F)\n"
-#             pip-licenses \
-#               --python="./${environments[0]}/bin/python3" \
-#               --from=mixed \
-#               --order=license \
-#               --format=markdown
-#             echo -e "\n## Summary\n"
-#             pip-licenses \
-#               --python="./${environments[0]}/bin/python3" \
-#               --from=mixed \
-#               --order=license \
-#               --format=markdown \
-#               --summary
-#           } >"${FILE_TO_COMMIT}"
-#           deactivate
-#           rm -fr "${environments[@]}"
-#           cat "${FILE_TO_COMMIT}"
-#       - name: Conditionally Commit and Push Output File
-#         if: env.WATCH_FILE_CHANGED_IN_PR
-#         run: |
-#           git config user.name github-actions[bot]
-#           git config user.email github-actions[bot]@users.noreply.github.com
-#           git add --verbose "${FILE_TO_COMMIT}"
-#           git commit --verbose --message="Update license file"
-#           git push --verbose origin "${GITHUB_HEAD_REF}"
+          Lorem ipsum dolor sit amet, consectetuer adipiscing elit! Aenean
+          commodo ligula eget dolor. Aenean massa;
+          EOF
+          git commit --verbose --message="${commit_msg}"
+          git push --verbose origin "${GITHUB_HEAD_REF}"
