--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -74,10 +74,9 @@ jobs:
           git config user.name github-actions[bot]
           git config user.email github-actions[bot]@users.noreply.github.com
           git add --verbose "${FILE_TO_COMMIT}"
-          read -rd '' commit_msg <<EOF
-          Update license file with new build dependencies
 
-          [Link to bot repo](https://github.com)
-          EOF
+          printf -v commit_msg "Update license file with new build dependencies\n
+          [Link to bot repo](https://github.com)"
+
           git commit --verbose --message="${commit_msg}"
           git push --verbose origin "${GITHUB_HEAD_REF}"
