--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -6,7 +6,6 @@ defaults:
 env:
   WATCH_FILE: requirements.txt
   COMMIT_FILE: LICENSES.md
-  SCRIPT: .github/pip-licenses.sh
   PY_BUILD_DEPS_FILE: requirements.txt
 on: pull_request
 jobs:
@@ -21,16 +20,23 @@ jobs:
         with:
           fetch-depth: 0
           ref: ${{ github.base_ref }}
+
       - name: Set Up Diffing
         # diff fails if no switch/checkout between diffed branches
         run: |
           git pull --verbose
           git checkout "${GITHUB_HEAD_REF}"
+
       - name: 'Set Condition: WATCH_FILE_CHANGED_IN_PR'
+        # diff exits 0 if no change thus reversing for varname with 'CHANGED';
+        # also, unknown how to store result as boolean so have to fromJson() the result
         run: |
-          git diff --exit-code --name-status "${GITHUB_HEAD_REF}..${GITHUB_BASE_REF}" -- "${WATCH_FILE}" ||
-            WATCH_FILE_CHANGED_IN_PR=true
-          echo "WATCH_FILE_CHANGED_IN_PR=${WATCH_FILE_CHANGED_IN_PR:-false}" >>"${GITHUB_ENV}"
+          var_name=WATCH_FILE_CHANGED_IN_PR
+          git diff --exit-code --name-status "${GITHUB_HEAD_REF}..${GITHUB_BASE_REF}" -- "${WATCH_FILE}" &&
+            result=false ||
+            result=true
+          echo "$var_name=${result}" | tee -a "${GITHUB_ENV}"
+
       - name: Setup Python Version and Caching
         if: fromJson(env.WATCH_FILE_CHANGED_IN_PR)
         uses: actions/setup-python@v4
@@ -38,8 +44,8 @@ jobs:
           python-version: '3.10'
           cache: 'pip'
           cache-dependency-path: '**/requirements*.txt'
+
       - name: If WATCH_FILE_CHANGED_IN_PR, Run License File Generator Script
-        # Need fromJson to cast true/false string to boolean
         if: fromJson(env.WATCH_FILE_CHANGED_IN_PR)
         # Create two environments to exclude pip-licenses dependencies from output
         run: |
@@ -77,11 +83,15 @@ jobs:
           rm -fr "${environments[@]}"
           cat "${COMMIT_FILE}"
           exit $status
+
       - name: 'Set Condition: COMMIT_FILE_CHANGED_IN_WORKFLOW'
         run: |
-          git diff --exit-code --name-status -- "${COMMIT_FILE}" || 
-            COMMIT_FILE_CHANGED_IN_WORKFLOW=true
-          echo "COMMIT_FILE_CHANGED_IN_WORKFLOW=${COMMIT_FILE_CHANGED_IN_WORKFLOW:-false}" >>"${GITHUB_ENV}"
+          var_name=COMMIT_FILE_CHANGED_IN_WORKFLOW
+          git diff --exit-code --name-status -- "${COMMIT_FILE}" &&
+            result=false ||
+            result=true
+          echo "$var_name=${result}" | tee -a "${GITHUB_ENV}"
+
       - name: If COMMIT_FILE_CHANGED_IN_WORKFLOW, Commit and Push
         if: fromJson(env.COMMIT_FILE_CHANGED_IN_WORKFLOW)
         run: |
