--- a/.github/workflows/pip-licenses.yml
+++ b/.github/workflows/pip-licenses.yml
@@ -98,8 +98,6 @@ jobs:
           git config user.name github-actions[bot]
           git config user.email github-actions[bot]@users.noreply.github.com
           git add --verbose "${COMMIT_FILE}"
-          printf -v commit_msg "Update license file with new build dependencies\n\n
-          [Link to bot repo](https://github.com)"
-          echo "${commit_msg}"
+          printf -v commit_msg "Update license file with new build dependencies\n\nBot repo: https://github.com\n"
           git commit --verbose --message="${commit_msg}"
           git push --verbose origin "${GITHUB_HEAD_REF}"
