--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -10,4 +10,17 @@ jobs:
     steps:
       - name: Checkout PR branch
         uses: actions/checkout@v3
-      - run: git branch
+      - run: |
+          git branch --show-current
+          gh pr view
+          gh pr view --comments
+          current_branch="$(git branch --show-current)"
+          run_id="$(
+            gh run list \
+              --branch "${current_branch}"
+              --workflow pip-licenses.yml \
+              --status success \
+              --json databaseId \
+              --jq '.[0].databaseId'
+          )"
+          gh run download $run_id --name "${run_id}-BUILD_DEPENDENCY_LICENSES.md"
