--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -8,25 +8,55 @@ jobs:
     runs-on: ubuntu-latest
     if: github.event.issue.pull_request && contains(github.event.comment.body, 'magic string')
     steps:
-      - uses: actions/github-script@v6
+      - uses: xt0rted/pull-request-comment-branch@v2
+        id: get-comment-branch
+      - uses: actions/checkout@v3
         with:
-          result-encoding: string
-          script: |
-            console.log(JSON.stringify( context ))
+          ref: ${{ steps.get.comment-branch.outputs.head_ref }}
+      - run: |
+          current_branch="$(git branch --show-current)"
+          run_id="$(
+            gh run list \
+              --branch "${current_branch}"
+              --workflow pip-licenses.yml \
+              --status success \
+              --json databaseId \
+              --jq '.[0].databaseId'
+          )"
+          gh run download $run_id --name "${run_id}-BUILD_DEPENDENCY_LICENSES.md"
+          cat "${run_id}-BUILD_DEPENDENCY_LICENSES.md"
 
-      # - name: Checkout PR branch
-      #   uses: actions/checkout@v3
-      # - run: |
-      #     git branch --show-current
-      #     gh pr view
-      #     gh pr view --comments
-      #     current_branch="$(git branch --show-current)"
-      #     run_id="$(
-      #       gh run list \
-      #         --branch "${current_branch}"
-      #         --workflow pip-licenses.yml \
-      #         --status success \
-      #         --json databaseId \
-      #         --jq '.[0].databaseId'
-      #     )"
-      #     gh run download $run_id --name "${run_id}-BUILD_DEPENDENCY_LICENSES.md"
+
+# - uses: actions/github-script@v6
+#   with:
+#     result-encoding: string
+#     script: |
+#       console.log(JSON.stringify( context.payload.issue.pull_request.url ))
+#       const response = await github.rest.issues.pulls({
+#         issue_number: context.issue.number,
+#         owner: context.payload.repository.owner.login,
+#         repo: context.payload.repository.name,
+#       })
+# Working example from other workflow
+# const { status, data } = await github.rest.pulls.listLanguages({
+#   owner: context.repo.owner,
+#   repo: context.repo.repo,
+#   pull_number: 'PULL_NUMBER',
+# })
+
+# https://docs.github.com/en/free-pro-team@latest/rest/pulls/pulls?apiVersion=2022-11-28#get-a-pull-request
+# await octokit.request('GET /repos/{owner}/{repo}/pulls/{pull_number}', {
+#   owner: 'OWNER',
+#   repo: 'REPO',
+#   pull_number: 'PULL_NUMBER',
+#   headers: {
+#     'X-GitHub-Api-Version': '2022-11-28'
+#   }
+# })
+
+# <comment_event.json | jq '.payload.issue.pull_request.url' -r
+# https://api.github.com/repos/gregalia/gha-learn/pulls/20
+
+# gh api /repos/gregalia/gha-learn/pulls/20 --jq '.head.ref'
+# pr-comment-build
+
