--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -13,11 +13,13 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ steps.get.comment-branch.outputs.head_ref }}
-      - run: |
+      - env:
+            GH_TOKEN: ${{ github.token }}
+        run: |
           current_branch="$(git branch --show-current)"
           run_id="$(
             gh run list \
-              --branch "${current_branch}"
+              --branch "${current_branch}" \
               --workflow pip-licenses.yml \
               --status success \
               --json databaseId \
