--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -15,6 +15,8 @@ jobs:
           ref: ${{ steps.get.comment-branch.outputs.head_ref }}
       - env:
             GH_TOKEN: ${{ github.token }}
+            ACTION_REF: ${{ steps.get.comment-branch.outputs.head_ref }}
+
         run: |
           current_branch="$(git branch --show-current)"
           run_id="$(
@@ -26,6 +28,7 @@ jobs:
               --jq '.[0].databaseId'
           )"
           echo -e "run_id: ${run_id}\ncurrent_branch: ${current_branch}"
+          echo "ACTION_REF: ${ACTION_REF}""
           gh run download $run_id --name "${run_id}-BUILD_DEPENDENCY_LICENSES.md"
           cat "${run_id}-BUILD_DEPENDENCY_LICENSES.md"
 
