--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -3,6 +3,10 @@ on:
   issue_comment:
     types: 
       - created
+permissions:
+  contents: read
+  issues: read
+  pull-requests: read
 jobs:
   deploy:
     runs-on: ubuntu-latest
