--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -14,7 +14,7 @@ jobs:
     steps:
       - uses: actions/upload-artifact@v3
         with:
-          name: ${{ github.event_path }}
+          name: event.json
           path: ${{ github.event_path }}
 
 
