--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -9,6 +9,7 @@ permissions:
   pull-requests: read
 env:
   GH_TOKEN: ${{ github.token }}
+  WORKFLOW_TO_DOWNLOAD_ARTIFACT_FROM: pip-licenses.yml
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -30,8 +31,8 @@ jobs:
         run: 
           run_id="$(
             gh run list \
-              --branch "${pr_branch}" \
-              --workflow pip-licenses.yml \
+              --branch "${PR_BRANCH}" \
+              --workflow "${{ env.WORKFLOW_TO_DOWNLOAD_ARTIFACT_FROM }}" \
               --status success \
               --json databaseId \
               --jq '.[0].databaseId'
