weird gh download --branch issue

--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -31,7 +31,7 @@ jobs:
         run: 
           run_id="$(
             gh run list \
-              --branch "${PR_BRANCH}" \
+              --branch "${{ env.PR_BRANCH }}" \
               --workflow "${{ env.WORKFLOW_TO_DOWNLOAD_ARTIFACT_FROM }}" \
               --status success \
               --json databaseId \
