--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -31,10 +31,10 @@ jobs:
         run: 
 # run_id="$(
           gh run list
-          gh run list \
-            -b "${{ env.PR_BRANCH }}" \
-            -w "${{ env.WORKFLOW_TO_DOWNLOAD_ARTIFACT_FROM }}" \
-            -s success \
+# gh run list \
+#   -b "${{ env.PR_BRANCH }}" \
+#   -w "${{ env.WORKFLOW_TO_DOWNLOAD_ARTIFACT_FROM }}" \
+#   -s success \
 # --json databaseId \
 # --q '.[0].databaseId'
 # )"
