--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -3,6 +3,7 @@ on:
   issue_comment:
     types: 
       - created
+      - edited
 permissions:
   contents: read
   issues: read
@@ -38,8 +39,10 @@ jobs:
               --jq '.[0].databaseId'
           )"
           echo "run_id ${run_id}"
-          gh run download "${run_id}" --name "${run_id}-BUILD_DEPENDENCY_LICENSES.md"
-          cat "${run_id}-BUILD_DEPENDENCY_LICENSES.md"
+          gh run download "${run_id}" \
+            --name "${run_id}-BUILD_DEPENDENCY_LICENSES.md"
+            --dir gh_download
+          cat gh_download/${run_id}-BUILD_DEPENDENCY_LICENSES.md
 
 
 # gh run list \
