--- a/.github/workflows/pr-comment.yml
+++ b/.github/workflows/pr-comment.yml
@@ -40,7 +40,7 @@ jobs:
           )"
           echo "run_id ${run_id}"
           gh run download "${run_id}" \
-            --name "${run_id}-BUILD_DEPENDENCY_LICENSES.md"
+            --name "${run_id}-BUILD_DEPENDENCY_LICENSES.md" \
             --dir gh_download
           cat gh_download/${run_id}-BUILD_DEPENDENCY_LICENSES.md
 
